--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
     
      <!-- Bubble dataviz JavaScript -->
     <script src="js/bubble.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     
 
     <!-- Custom scripts for this template -->
