--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
       </div>
     </section>
 
+
+    <div class="copyright py-4 text-center text-white">
+      <div class="container">
+        <small>Version 4</small>
+      </div>
+    </div>
     
     <!-- Footer -->
     <footer class="footer text-center">
