--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     
     <!-- Custom styles for bubble dataviz -->
     <link href="css/bubble.css" rel="stylesheet">
+	  
+    <!-- Link to JS Scripts -->
+    <script type="text/javascript" src="/js/extras/jquery.min.1.7.js"></script>
+    <script type="text/javascript" src="/js/extras/modernizr.2.5.3.min.js"></script>
 
   </head>
 
@@ -251,6 +255,49 @@
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
 
+   <!-- Flipbook -->
+	  <script type="text/javascript">
+
+function loadApp() {
+
+	// Create the flipbook
+
+	$('.flipbook').turn({
+			// Width
+
+			width:922,
+			
+			// Height
+
+			height:600,
+
+			// Elevation
+
+			elevation: 50,
+			
+			// Enable gradients
+
+			gradients: true,
+			
+			// Auto center this flipbook
+
+			autoCenter: true
+
+	});
+}
+
+// Load the HTML4 version if there's not CSS transform
+
+yepnope({
+	test : Modernizr.csstransforms,
+	yep: ['js/lib/turn.js'],
+	nope: ['js/lib/turn.html4.min.js'],
+	both: ['css/basic.css'],
+	complete: loadApp
+});
+
+</script>
+	  
   </body>
 
 </html>
