--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <link href="css/bubble.css" rel="stylesheet">
 	  
     <!-- Link to JS Scripts -->
-    <script type="text/javascript" src="/js/extras/jquery.min.1.7.js"></script>
-    <script type="text/javascript" src="/js/extras/modernizr.2.5.3.min.js"></script>
+    <script type="text/javascript" src="js/extras/jquery.min.1.7.js"></script>
+    <script type="text/javascript" src="js/extras/modernizr.2.5.3.min.js"></script>
 
   </head>
 
