--- a/pages/page7.html
+++ b/pages/page7.html
@@ -1,4 +1,9 @@
-        <div class="container text-center">
+           <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
+      <div class="portfolio-modal-dialog bg-white">
+        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+          <i class="fa fa-3x fa-times"></i>
+        </a>
+<div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Dataviz bubble</h2>
@@ -7,6 +12,12 @@
                   <!-- Dataviz bubble -->
                   <div id="tooltip"></div>
                   <svg id="bubble" width="600" height="600"></svg>
-                      </div>
+                     
+              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                <i class="fa fa-close"></i>
+                Close Project</a>
+            </div>
           </div>
         </div>
+      </div>
+    </div>
