--- a/pages/page7.html
+++ b/pages/page7.html
@@ -1,4 +1,7 @@
-           <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
+               <!-- Custom styles for bubble dataviz -->
+    <link href="css/bubble.css" rel="stylesheet">
+
+<div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -21,3 +24,7 @@
         </div>
       </div>
     </div>
+
+     <!-- Bubble dataviz JavaScript -->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="js/bubble.js"></script>
