--- a/pages/page7.html
+++ b/pages/page7.html
@@ -18,6 +18,7 @@
     <link href="css/bubble.css" rel="stylesheet">
 </head>
 
+<body>
 <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -45,3 +46,4 @@
      <!-- Bubble dataviz JavaScript -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="js/bubble.js"></script>
+</body>
