--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <h1 class="text-uppercase mb-0">DATAVIZ - BIBLIPARIS</h1>
+        <h1 class="text-uppercase mb-0">PARIS A TRAVERS SES BIBLIOTHEQUES </h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Un projet en cours de construction...</h2>
         <br>
