--- a/pages/page6.html
+++ b/pages/page6.html
@@ -3,4 +3,4 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Dataviz bubble</h2>
               <hr class="star-dark mb-5">
-              Blablabla...
+              New text
