--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 
-    <!-- Header -->
+    <!-- Header
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
         <h1 class="text-uppercase mb-0">BIBLIPARIS </h1>
@@ -55,7 +55,7 @@
         <br>
         <p class="lead mb-0">Vous trouverez dans cette bibliothèque numérique quelques ouvrages vous contant une histoire de Paris à travers ses bibliothèques. À l''heure du digital, quelle place existe-t-il encore pour les bibliothèques de la Ville Lumière ? Ces lieux sont-ils encore des axes majeurs dans la diffusion des connaissances ? Observe-t-on des inégalités d'accès à cette connaissance ? <br> Pour répondre à ces questions, nous utiliserons les données publiques fournies par la Mairie de Paris sur les différentes bibliothèques et habitudes de consommation liées à celles-ci.</p>
       </div>
-    </header>
+    </header> -->
 
     <!-- Portfolio Grid Section -->
     <section class="portfolio" id="portfolio">
