--- a/pages/page6.html
+++ b/pages/page6.html
@@ -3,4 +3,13 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Dataviz bubble</h2>
               <hr class="star-dark mb-5">
-              Texte ...
+              Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office
+
+              Pourquoi les Parisiens vont-ils à la bibliothèque ? Principalement pour se détendre : les bandes dessinées représentent XX % des emprunts parmi les XX milliers de titres les plus empruntés. Les principales références sont intemporelles : chez les adultes, Tintin, Astérix et Obélix sont aux premières loges, mais on trouve aussi le manga Fairy Tail, très populaire. Chez les enfants, c’est la série des Max et Lili qui est incontestablement à la première place, 
+
+              Les lecteurs sont aussi très friands de revues : Elle, Le Figaro Magazine ou Le Point chez les adultes, Astrapi, Le Journal de Mickey et les autres J’aime Lire et Belles histoires chez les enfants. 
+
+              Les lecteurs des bibliothèques empruntent quand même des livres ! Les auteurs à succès y sont bien représentés : Fred Vargas, Guillaume Musso, etc.
+              On notera cependant l’absence de 50 shades of grey, paru cette année-là : conservatisme des bibliothèques ou timidité des usagers ?
+
+
