--- a/pages/page5.html
+++ b/pages/page5.html
@@ -1,9 +1,10 @@
 <div class="table-contents">
-	<h1>Contents</h1>
+	<h1>Table des matières</h1>
 	<ul>
-		<li><a href="#page/7">Une histoire de bulle... <span>7</span></a></li>
-		<li><a href="#page/10">Youth<span>10</span></a></li>
-		<li><a href="#page/18">The Apple I <span>18</span></a></li>
+		<li><a href="#page/7">I. Max et Lili, Tintin, Mickey: stars du box-office <span>7</span></a></li>
+		<li><a href="#page/10">II. Dis moi ce que tu empruntes, je te dirais où tu habites<span>10</span></a></li>
+		<li><a href="#page/18">III. Les bibliothèques, has been ?<span>18</span></a></li>
+		<li><a href="#page/18">IV. Tous égaux dans l’accès aux bibliothèques ?<span>18</span></a></li>
 	</ul>
 </div>
 <span class="page-number">5</span>
