--- a/pages/page6.html
+++ b/pages/page6.html
@@ -3,6 +3,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Dataviz bubble</h2>
               <hr class="star-dark mb-5">
+              <div id="text_to_change"></div>
               Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office
 
               Pourquoi les Parisiens vont-ils à la bibliothèque ? Principalement pour se détendre : les bandes dessinées représentent XX % des emprunts parmi les XX milliers de titres les plus empruntés. Les principales références sont intemporelles : chez les adultes, Tintin, Astérix et Obélix sont aux premières loges, mais on trouve aussi le manga Fairy Tail, très populaire. Chez les enfants, c’est la série des Max et Lili qui est incontestablement à la première place, 
