--- a/pages/page6.html
+++ b/pages/page6.html
@@ -4,6 +4,6 @@
               <h2 class="text-secondary text-uppercase mb-0">Dataviz bubble</h2>
               <hr class="star-dark mb-5">
               <h4>Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</h4>
-
+              Pourquoi les Parisiens vont-ils à la bibliothèque ? Principalement pour se détendre : les bandes dessinées et revues représentent XX % des emprunts parmi les XX milliers de titres les plus empruntés.
               <div id="text_to_change"></div>
 
