--- a/pages/page11.html
+++ b/pages/page11.html
@@ -1,7 +1,7 @@
 <div class="book-content">
 
 <p class="center-pic">
-	<img src="img/infographie.jpg" style="width:350px; height:230px;">
+	<img src="pics/infographie.jpg" style="width:350px; height:600px;">
 </p>
 
 
