--- a/pages/page9.html
+++ b/pages/page9.html
@@ -1,16 +1,8 @@
+ <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
 <div class="book-content">
+ <iframe width="100%" height="400" frameborder="0" src="https://victoramoureux.carto.com/builder/07101633-7f3f-4278-a324-f75ffc1679ad/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+    
+  </body>
+</html>
 
-<p class="center-pic">
-	<img src="samples/steve-jobs/pics/books.jpg?p" style="width:350px; height:230px;">
-</p>
-
-<p class="no-indent">
-of the iMac, iPod, iTunes, Apple Stores, and iPad.
-</p>
-
-
-<p>
-Jobs' abrasive personality, which simultaneously inspired and intimidated those around him, is a recurrent theme throughout. Details of his personal life are also included, including early relationships, his marriage of twenty years, and his four children and his early life. 
-
-</div>
-<span class="page-number">9</span>
+</div>  
