--- a/pages/page10.html
+++ b/pages/page10.html
@@ -1,22 +1,10 @@
-<div class="book-content">
-
-<h1>Youth</h1>
-
-<h2>The jobs family</h2>
-
-<p class="capital">
-Steve Jobs was born on February 24, 1955, in the city of San Francisco. His biological mother was an unwed graduate student named Joanne Simpson,
-and his biological father was either a political science or mathematics professor, a native Syrian named Abdulfattah John Jandali.
-</p>
-
-
-<p>
-Being born out of wedlock in the puritan America of the 1950s, the baby
-was put up for adoption. Joanne had a college education, and she insisted that the future parents of her boy be just as well educated. Unfortunately,
-the candidates, Paul and Clara Jobs, did not meet her expectations: they were a lower-middle class couple that had settled in the Bay Area after the
-war. Paul was a machinist from the Midwest who had
-</p>
-
-
-</div>
-<span class="page-number">10</span>
+<div class="container text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h2 class="text-secondary text-uppercase mb-0">Dataviz bubble</h2>
+              <hr class="star-dark mb-5">
+              <h4>Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</h4>
+              <div id="text_to_change"></div>
+                      <div id="" style="overflow-y: scroll; height:400px;">
+                                <p>A l’heure du numérique et des jeux vidéos, les longues allées des bibliothèques pourraient être désertées. Il n’en est rien : les bibliothèques ont une riche activité, et permettent d’accéder à des ressources variées - livres, revues, CD, DVD, etc.</p>
+                      </div>
