--- a/pages/page10.html
+++ b/pages/page10.html
@@ -3,7 +3,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Dataviz bubble</h2>
               <hr class="star-dark mb-5">
-              <h4>Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</h4>
+              <h4>III. Les bibliothèques, has been ?</h4>
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:400px;">
                                 <p>A l’heure du numérique et des jeux vidéos, les longues allées des bibliothèques pourraient être désertées. Il n’en est rien : les bibliothèques ont une riche activité, et permettent d’accéder à des ressources variées - livres, revues, CD, DVD, etc.</p>
