--- a/pages/page6.html
+++ b/pages/page6.html
@@ -1,11 +1,10 @@
 <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Dataviz bubble</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</h2>
               <hr class="star-dark mb-5">
-              <h4>Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</h4>
               <div id="text_to_change"></div>
-                      <div id="" style="overflow-y: scroll; height:400px;">
+                      <div id="" style="overflow-y: scroll; height:380px;">
                                 <p>Pourquoi les Parisiens vont-ils à la bibliothèque ? Principalement pour se détendre : les bandes dessinées et revues représentent XX % des emprunts parmi les XX milliers de titres les plus empruntés.
 
 
