--- a/pages/page8.html
+++ b/pages/page8.html
@@ -1,11 +1,10 @@
 <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Dataviz bubble</h2>
+              <h2 class="text-secondary text-uppercase mb-0">II. Dis-moi ce que tu empruntes, je te dirai où tu habites ?</h2>
               <hr class="star-dark mb-5">
-              <h4>II. Dis-moi ce que tu empruntes, je te dirai où tu habites ?</h4>
               <div id="text_to_change"></div>
-                      <div id="" style="overflow-y: scroll; height:400px;">
+                      <div id="" style="overflow-y: scroll; height:380px;">
                                 <p>On le sait, les goûts et les caractères des Parisiens diffèrent selon les arrondissements… Retrouve-t-on cette différence dans les principaux titres empruntés ? 
 
 L’étude de certains titres ou auteurs phares montre que si les goûts des parisiens sont globalement homogènes, certaines différences peuvent parfois apparaître. 
