--- a/pages/page12.html
+++ b/pages/page12.html
@@ -1,9 +1,8 @@
 <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Dataviz bubble</h2>
+              <h2 class="text-secondary text-uppercase mb-0">IV. Tous égaux dans l’accès aux bibliothèques ?</h2>
               <hr class="star-dark mb-5">
-              <h4>IV. Tous égaux dans l’accès aux bibliothèques ?</h4>
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:400px;">
                                 <p>Les bibliothèques répondent aussi à une fonction de cohésion sociale, celui de permettre à chacun d’accéder à la lecture, à la culture, quel que soit son revenu, sa classe sociale, mais aussi son handicap. Tous les arrondissement sont-ils alors également dotés ? Pas vraiment. 
