--- a/pages/page6.html
+++ b/pages/page6.html
@@ -1,7 +1,7 @@
 <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</h2>
+              <p>I. Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</p>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:380px;">
