--- a/pages/page6.html
+++ b/pages/page6.html
@@ -4,7 +4,7 @@
               <p>I. Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</p>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
-                      <div id="" style="overflow-y: scroll; height:380px;">
+                      <div id="" style="overflow-y: scroll; height:380px; width:100%">
                                 <p>Pourquoi les Parisiens vont-ils à la bibliothèque ? Principalement pour se détendre : les bandes dessinées et revues représentent XX % des emprunts parmi les XX milliers de titres les plus empruntés.
 
 
