--- a/pages/page6.html
+++ b/pages/page6.html
@@ -1,4 +1,4 @@
-
+<div style="margin: 10px 10px 10px 10px;">
               <p>I. Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</p>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
@@ -13,4 +13,4 @@ Les lecteurs sont aussi très friands de revues : Elle, Le Figaro Magazine ou Le
 Les lecteurs des bibliothèques empruntent quand même des livres ! Les auteurs à succès y sont bien représentés : Fred Vargas, Guillaume Musso, etc. Chez les enfants, c’est la série des Max et Lili qui est incontestablement à la première place, 
 On notera cependant l’absence de 50 shades of grey, paru cette année-là : conservatisme des bibliothèques ou timidité des usagers ?</p>
                       </div>
-
+</div>
