--- a/pages/page6.html
+++ b/pages/page6.html
@@ -1,9 +1,19 @@
 <div style="margin: 30px 30px 30px 30px;">
-              <p>I. Les goûts de Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</p>
+              <h4>I. Les goûts des Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</h4>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:380px; width:100%">
-                                <p>
-</p>
+                                <p>Pourquoi les Parisiens vont-ils à la bibliothèque ?<br>
+<br>
+                                Principalement pour se détendre : les bandes dessinées et revues représentent XX % des emprunts parmi les XX milliers de titres les plus empruntés.<br>
+
+<br>
+ Les principales références sont intemporelles : chez les adultes, Tintin, Astérix et Obélix sont aux premières loges, mais on trouve aussi le manga Fairy Tail, très populaire,
+<br>
+Les lecteurs sont aussi très friands de revues : Elle, Le Figaro Magazine ou Le Point chez les adultes, Astrapi, Le Journal de Mickey et les autres J’aime Lire et Belles histoires chez les enfants. <br>
+<br>
+Les lecteurs des bibliothèques empruntent quand même des livres ! Les auteurs à succès y sont bien représentés : Fred Vargas, Guillaume Musso, etc. Chez les enfants, c’est la série des Max et Lili qui est incontestablement à la première place, 
+On notera cependant l’absence de 50 shades of grey, paru cette année-là : conservatisme des bibliothèques ou timidité des usagers ?<br>
+<br></p>
                       </div>
 </div>
