--- a/pages/page10.html
+++ b/pages/page10.html
@@ -1,9 +1,8 @@
-<div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">III. Les bibliothèques, has been ?</h2>
+<div style="margin: 30px 30px 30px 30px;">
+              <h4>III. Les bibliothèques, has been ?</h4>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:400px;">
                                 <p>A l’heure du numérique et des jeux vidéos, les longues allées des bibliothèques pourraient être désertées. Il n’en est rien : les bibliothèques ont une riche activité, et permettent d’accéder à des ressources variées - livres, revues, CD, DVD, etc.</p>
                       </div>
+</div>
