--- a/pages/page11.html
+++ b/pages/page11.html
@@ -1,5 +1,7 @@
+<div style="margin: 30px 30px 30px 30px;">
 <p class="center-pic">
-	<img src="pics/infographie.png" style="width:350px; height:600px;">
+	<img src="pics/infographie.png" style="width:424px; height:600px;">
 </p>
 
 <span class="page-number">11</span>
+</div>
