--- a/pages/page12.html
+++ b/pages/page12.html
@@ -3,9 +3,9 @@
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:400px;">
-                                <p>Les bibliothèques répondent aussi à une fonction de cohésion sociale, celui de permettre à chacun d’accéder à la lecture, à la culture, quel que soit son revenu, sa classe sociale, mais aussi son handicap. Tous les arrondissement sont-ils alors également dotés ? Pas vraiment. <br>
+                                <p>Les bibliothèques répondent aussi à une fonction de cohésion sociale, celle de permettre à chacun d'accéder à la culture. Tous les arrondissement sont-ils alors également dotés ? Pas vraiment. <br>
 <br>
-En effet, les arrondissement plutôt populaires de la capitale comptent un nombre important de bibliothèques (5 dans le 18e, 6 dans le 19e, etc.) mais, rapporté au nombre de ménages pauvres vivant dans l’arrondissement, les inégalités entre le centre de Paris et les arrondissements périphériques sont criantes. Alors qu’on compte, en moyenne, 860 ménages pauvres par bibliothèque dans le 5e arrondissement, doté de 5 bibliothèques de prêt, on en compte près de 5000 dans le 18e ou près de 7000 dans le 11e ! <br>
+En effet, malgré un nombre relativement important de bibliothèques dans les arrondissement plus populaires, les inégalités entre le centre de Paris et les arrondissements périphériques sont criantes. <b> Alors qu’on compte, en moyenne, 860 ménages pauvres par bibliothèque dans le 5e arrondissement, doté de 5 bibliothèques de prêt, on en compte près de 5000 dans le 18e ou près de 7000 dans le 11e ! </b> <br>
 <br>
 On notera cependant que la plupart des ouvertures récentes des bibliothèques, comme la récente bibliothèque Assia Djebar, se concentrent dans les arrondissements périphériques. De plus, les bibliothèques des arrondissements plus défavorisés comptent parfois des services particuliers, notamment de l’aide au devoir délivrée par des volontaires du service civique qui sont disponibles dans les arrondissements du nord-est de la capitale.<br>
 <br>
