--- a/pages/page12.html
+++ b/pages/page12.html
@@ -5,7 +5,7 @@
                       <div id="" style="overflow-y: scroll; height:400px;">
                                 <p>Les bibliothèques répondent aussi à une fonction de cohésion sociale, celle de permettre à chacun d'accéder à la culture. Tous les arrondissement sont-ils alors également dotés ? Pas vraiment. <br>
 <br>
-En effet, malgré un nombre relativement important de bibliothèques dans les arrondissement plus populaires, les inégalités entre le centre de Paris et les arrondissements périphériques sont criantes. <b> Alors qu’on compte, en moyenne, 860 ménages pauvres par bibliothèque dans le 5e arrondissement, doté de 5 bibliothèques de prêt, on en compte près de 5000 dans le 18e ou près de 7000 dans le 11e ! </b> <br>
+En effet, malgré un nombre relativement important de bibliothèques dans les arrondissement plus populaires, <b> les inégalités entre le centre de Paris et les arrondissements périphériques sont criantes.  Alors qu’on compte, en moyenne, 860 ménages pauvres par bibliothèque dans le 5e arrondissement, on en compte près de 5000 dans le 18e ou près de 7000 dans le 11e ! </b> <br>
 <br>
 On notera cependant que la plupart des ouvertures récentes des bibliothèques, comme la récente bibliothèque Assia Djebar, se concentrent dans les arrondissements périphériques. De plus, les bibliothèques des arrondissements plus défavorisés comptent parfois des services particuliers, notamment de l’aide au devoir délivrée par des volontaires du service civique qui sont disponibles dans les arrondissements du nord-est de la capitale.<br>
 <br>
