--- a/pages/page12.html
+++ b/pages/page12.html
@@ -9,7 +9,7 @@ En effet, malgré un nombre relativement important de bibliothèques dans les ar
 <br>
  Alors qu’on compte, en moyenne, 860 ménages pauvres par bibliothèque dans le 5e arrondissement, on en compte près de 5000 dans le 18e ou près de 7000 dans le 11e ! </b> <br>
 <br>
-On notera cependant que la plupart des ouvertures récentes des bibliothèques, comme la récente bibliothèque Assia Djebar, se concentrent dans les arrondissements périphériques. De plus, les bibliothèques des arrondissements plus défavorisés comptent parfois des services particuliers, notamment de l’aide au devoir délivrée par des volontaires du service civique qui sont disponibles dans les arrondissements du nord-est de la capitale.<br>
+Cependant, la plupart des ouvertures de nouvelles bibliothèques, comme Assia Djebar dans le 20e, ouverte en janvier 2018, se concentrent dans les arrondissements périphériques. De plus, les bibliothèques des arrondissements plus défavorisés comptent parfois des services particuliers, notamment de l’aide au devoir délivrée par des volontaires du service civique qui sont disponibles dans les arrondissements du nord-est de la capitale.<br>
 <br>
 On notera aussi que dans des arrondissements plus aisés comme le 15e ou le 16e, le faible nombre de bibliothèques (seulement 2 dans le 16e, 4 dans le 15e) rapporté à la taille de l’arrondissement limite aussi l’accès à la culture pour les ménages pauvres à l’intérieur de ces arrondissements.<br>
 
