--- a/index.html
+++ b/index.html
@@ -39,10 +39,26 @@
     <!-- Custom styles for bubble dataviz -->
     <link href="css/bubble.css" rel="stylesheet">
 
+    <style> 
+p.premier {
+  font-family:"Times New Roman";
+   text-align:justify;
+   text-indent:0;
+  -webkit-hyphens:none;
+} 
+span.lettrine {
+  float:left;
+  font-family:"Times New Roman";
+  font-size:3em;
+  text-indent:0;
+  margin-right:0.1em;
+}
+  </style>
+
 </head>
 <body>
 
-	<body id="page-top">
+	<body>
    
             
 <div id="canvas">
