--- a/pages/page14.html
+++ b/pages/page14.html
@@ -1,9 +1,9 @@
 <div style="margin: 30px 30px 30px 30px;">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:400px;">
-                                <p>Enfin, les bibliothèques parisiennes ont une politique d’accessibilité aux publics handicapés importante : la majorité des bibliothèques sont ainsi accessibles aux personnes à mobilité réduite et chaque arrondissement. Hormis les 7e et 8e, qui ne comptent aucune bibliothèque accessible aux personnes handicapées, chaque arrondissement a rendu au moins 50 % de ses bibliothèques accessibles aux personnes à mobilité réduite. <br>
+                                <p class="premier">Enfin, les bibliothèques parisiennes ont une politique d’accessibilité aux publics handicapés importante : la majorité des bibliothèques sont ainsi accessibles aux personnes à mobilité réduite et chaque arrondissement. Hormis les 7e et 8e, qui ne comptent aucune bibliothèque accessible aux personnes handicapées, chaque arrondissement a rendu au moins 50 % de ses bibliothèques accessibles aux personnes à mobilité réduite. <br>
                                 <br>
-                                Les bibliothèques proposent aussi un certain nombre de services adaptées aux personnes malvoyantes : livres en gros caractère, livres sonores, etc. Cependant, toutes les bibliothèques et a fortiori tous les arrondissements ne disposent pas du même catalogue. Ainsi, les arrondissements du centre de Paris sont, cette fois-ci, relativement sous-dotés (hormis le 5e arrondissement, à nouveau dans le haut du panier) alors que les arrondissements périphériques apparaissent davantage dotés en livres spéciaux : 7300 dans le 18e, près de 8 000 dans le 19e et près de 11 000 dans le 15e. 
+                                
                                 </p>
                       </div>
 </div>
