--- a/pages/page5.html
+++ b/pages/page5.html
@@ -1,10 +1,17 @@
 <div class="table-contents">
 	<h1>Table des matières</h1>
+	<br>
+	<br>
 	<ul>
-		<li><a href="#page/6">I. Max et Lili, Tintin, Mickey : stars du box-office <span>6</span></a></li>
-		<li><a href="#page/8">II. Dis moi ce que tu empruntes, je te dirai où tu habites<span>8</span></a></li>
-		<li><a href="#page/10">III. Les bibliothèques, has been ?<span>10</span></a></li>
-		<li><a href="#page/12">IV. Tous égaux dans l’accès aux bibliothèques ?<span>12</span></a></li>
+		<li><a href="#page/6">I. Max et Lili, Tintin, Mickey : stars du box-office <span>6</span></a></li><br>
+		<br>
+		<br>
+		<li><a href="#page/8">II. Dis moi ce que tu empruntes, je te dirai où tu habites<span>8</span></a></li><br>
+		<br>
+		<br>
+		<li><a href="#page/10">III. Les bibliothèques, has been ?<span>10</span></a></li><br>
+		<br>
+		<li><a href="#page/12">IV. Tous égaux dans l’accès aux bibliothèques ?<span>12</span></a></li><br>
 	</ul>
 </div>
 <span class="page-number">5</span>
