--- a/pages/page6.html
+++ b/pages/page6.html
@@ -3,8 +3,7 @@
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:380px; width:100%">
-                                <p>Pourquoi les Parisiens vont-ils à la bibliothèque ?<br>
-<br>
+                                <p class="premier"><span class="lettrine">P</span>ourquoi les Parisiens vont-ils à la bibliothèque ?<br>
                                 Principalement pour se détendre : les bandes dessinées et revues représentent XX % des emprunts parmi les XX milliers de titres les plus empruntés.<br>
 
 <br>
