--- a/pages/page8.html
+++ b/pages/page8.html
@@ -3,7 +3,7 @@
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:380px;">
-                                <p>On le sait, les goûts et les caractères des Parisiens diffèrent selon les arrondissements… Retrouve-t-on cette différence dans les principaux titres empruntés ? <br>
+                                <p class="premier"><span class="lettrine">O</span>n le sait, les goûts et les caractères des Parisiens diffèrent selon les arrondissements… Retrouve-t-on cette différence dans les principaux titres empruntés ? <br>
 <br>
 L’étude de certains titres ou auteurs phares montre que si les goûts des parisiens sont globalement homogènes, certaines différences peuvent parfois apparaître. <br>
 <br>
