--- a/pages/page10.html
+++ b/pages/page10.html
@@ -3,6 +3,6 @@
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:400px;">
-                                <p>A l’heure du numérique et des jeux vidéos, les longues allées des bibliothèques pourraient être désertées. Il n’en est rien : les bibliothèques ont une riche activité, et permettent d’accéder à des ressources variées - livres, revues, CD, DVD, etc.</p>
+                                <p class="premier"><span class="lettrine">A</span> l’heure du numérique et des jeux vidéos, les longues allées des bibliothèques pourraient être désertées. Il n’en est rien : les bibliothèques ont une riche activité, et permettent d’accéder à des ressources variées - livres, revues, CD, DVD, etc.</p>
                       </div>
 </div>
