--- a/pages/page12.html
+++ b/pages/page12.html
@@ -1,4 +1,4 @@
-<div style="margin: 30px 30px 30px 30px;">
+<div style="margin: 30px 30px 40px 30px;">
               <h4>IV. Tous égaux dans l’accès aux bibliothèques ?</h4>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
@@ -14,3 +14,4 @@ On notera aussi que dans des arrondissements plus aisés comme le 15e ou le 16e,
                                 </p>
                       </div>
 </div>
+<span class="page-number">12</span>
