--- a/pages/page6.html
+++ b/pages/page6.html
@@ -1,4 +1,4 @@
-<div style="margin: 30px 30px 30px 30px;">
+<div style="margin: 30px 30px 40px 30px;">
               <h4>I. Les goûts des Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</h4>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
@@ -16,3 +16,4 @@ On notera cependant l’absence de 50 shades of grey, paru cette année-là : co
 <br></p>
                       </div>
 </div>
+<span class="page-number">6</span>
