--- a/pages/page8.html
+++ b/pages/page8.html
@@ -1,4 +1,4 @@
-<div style="margin: 30px 30px 30px 30px;">
+<div style="margin: 30px 30px 40px 30px;">
               <h4>II. Dis-moi ce que tu empruntes, je te dirai où tu habites ?</h4>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
@@ -15,3 +15,4 @@ Enfin, si dans tous les arrondissements ou presque, Max et Lili l’emportent al
 </p>
                       </div>
 </div>
+<span class="page-number">8</span>
