--- a/pages/page10.html
+++ b/pages/page10.html
@@ -1,4 +1,4 @@
-<div style="margin: 30px 30px 30px 30px;">
+<div style="margin: 30px 30px 40px 30px;">
               <h4>III. Les bibliothèques, has been ?</h4>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
@@ -6,3 +6,4 @@
                                 <p class="premier"><span class="lettrine">A</span> l’heure du numérique et des jeux vidéos, les longues allées des bibliothèques pourraient être désertées. Il n’en est rien : les bibliothèques ont une riche activité, et permettent d’accéder à des ressources variées - livres, revues, CD, DVD, etc.</p>
                       </div>
 </div>
+<span class="page-number">10</span>
