--- a/pages/page14.html
+++ b/pages/page14.html
@@ -1,4 +1,4 @@
-<div style="margin: 30px 30px 30px 30px;">
+<div style="margin: 30px 30px 40px 30px;">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:400px;">
                                 <p class="premier">Enfin, les bibliothèques parisiennes ont une politique d’accessibilité aux publics handicapés importante : la majorité des bibliothèques sont ainsi accessibles aux personnes à mobilité réduite et chaque arrondissement. Hormis les 7e et 8e, qui ne comptent aucune bibliothèque accessible aux personnes handicapées, chaque arrondissement a rendu au moins 50 % de ses bibliothèques accessibles aux personnes à mobilité réduite. <br>
@@ -7,3 +7,4 @@
                                 </p>
                       </div>
 </div>
+<span class="page-number">14</span>
