--- a/pages/page16.html
+++ b/pages/page16.html
@@ -1,4 +1,4 @@
-<div style="margin: 30px 30px 30px 30px;">
+<div style="margin: 30px 30px 40px 30px;">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:400px;">
                                 
@@ -7,3 +7,4 @@
                                 </p>
                       </div>
 </div>
+<span class="page-number">16</span>
