--- a/pages/page12.html
+++ b/pages/page12.html
@@ -3,11 +3,12 @@
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:400px;">
-                                <p class="premier"><span class="lettrine">L</span>es bibliothèques répondent aussi à une fonction de cohésion sociale, celui de permettre à chacun d’accéder à la lecture, à la culture, quel que soit son revenu, sa classe sociale, mais aussi son handicap. Tous les arrondissement sont-ils alors également dotés ? Pas vraiment. <br>
+                                <p class="premier"><span class="lettrine">L</span>es bibliothèques répondent aussi à une fonction de cohésion sociale, celle de <b> permettre à chacun d’accéder à la culture. </b>Tous les arrondissement sont-ils alors également dotés ? Pas vraiment... <br>
 <br>
-En effet, les arrondissement plutôt populaires de la capitale comptent un nombre important de bibliothèques (5 dans le 18e, 6 dans le 19e, etc.) mais, rapporté au nombre de ménages pauvres vivant dans l’arrondissement, les inégalités entre le centre de Paris et les arrondissements périphériques sont criantes. Alors qu’on compte, en moyenne, 860 ménages pauvres par bibliothèque dans le 5e arrondissement, doté de 5 bibliothèques de prêt, on en compte près de 5000 dans le 18e ou près de 7000 dans le 11e ! <br>
+En effet, malgré un nombre important de bibliothèques dans les quartiers plus populaires de la capitale (5 dans le 18e, 6 dans le 19e, etc.), <b> les inégalités entre le centre de Paris et les arrondissements périphériques sont criantes. </b> <br>
 <br>
-On notera cependant que la plupart des ouvertures récentes des bibliothèques, comme la récente bibliothèque Assia Djebar, se concentrent dans les arrondissements périphériques. De plus, les bibliothèques des arrondissements plus défavorisés comptent parfois des services particuliers, notamment de l’aide au devoir délivrée par des volontaires du service civique qui sont disponibles dans les arrondissements du nord-est de la capitale.<br>
+<b> Alors qu’on compte, en moyenne, 860 ménages pauvres par bibliothèque dans le 5e arrondissement, doté de 5 bibliothèques de prêt, on en compte près de 5000 dans le 18e ou près de 7000 dans le 11e ! </b> On notera cependant que la plupart des ouvertures récentes des bibliothèques, comme Assia Djebar dans le 20e en janvier 2018, se concentrent dans les arrondissements périphériques. <br>
+<br> De plus, les bibliothèques des arrondissements plus défavorisés comptent parfois des services particuliers, notamment de l’<b>aide aux devoirs</b> délivrée par des volontaires du service civique, principalement au Nord-Est de la capitale (voir l'option "légende" sur la carte)<br>
 <br>
 On notera aussi que dans des arrondissements plus aisés comme le 15e ou le 16e, le faible nombre de bibliothèques (seulement 2 dans le 16e, 4 dans le 15e) rapporté à la taille de l’arrondissement limite aussi l’accès à la culture pour les ménages pauvres à l’intérieur de ces arrondissements.<br>
 
