--- a/pages/page12.html
+++ b/pages/page12.html
@@ -7,7 +7,7 @@
 <br>
 En effet, malgré un nombre important de bibliothèques dans les quartiers plus populaires de la capitale (5 dans le 18e, 6 dans le 19e, etc.), <b> les inégalités entre le centre de Paris et les arrondissements périphériques sont criantes. </b> <br>
 <br>
-<b> Alors qu’on compte, en moyenne, 860 ménages pauvres par bibliothèque dans le 5e arrondissement, doté de 5 bibliothèques de prêt, on en compte près de 5000 dans le 18e ou près de 7000 dans le 11e ! </b> On notera cependant que la plupart des ouvertures récentes des bibliothèques, comme Assia Djebar dans le 20e en janvier 2018, se concentrent dans les arrondissements périphériques. <br>
+<b> Alors qu’on compte, en moyenne, 860 ménages pauvres par bibliothèque dans le 5e arrondissement, doté de 5 bibliothèques de prêt, on en compte près de 5000 dans le 18e ou près de 7000 dans le 11e ! </b> On notera cependant que la plupart des ouvertures récentes des bibliothèques, comme Assia Djebar dans le 20e en janvier 2018, se concentrent dans ces arrondissements périphériques. <br>
 <br> De plus, les bibliothèques des arrondissements plus défavorisés comptent parfois des services particuliers, notamment de l’<b>aide aux devoirs</b> délivrée par des volontaires du service civique, principalement au Nord-Est de la capitale (voir l'option "légende" sur la carte)<br>
 <br>
 On notera aussi que dans des arrondissements plus aisés comme le 15e ou le 16e, le faible nombre de bibliothèques (seulement 2 dans le 16e, 4 dans le 15e) rapporté à la taille de l’arrondissement limite aussi l’accès à la culture pour les ménages pauvres à l’intérieur de ces arrondissements.<br>
