--- a/pages/page14.html
+++ b/pages/page14.html
@@ -1,9 +1,12 @@
 <div style="margin: 30px 30px 40px 30px;">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:400px;">
-                                <p class="premier">Enfin, les bibliothèques parisiennes ont une politique d’accessibilité aux publics handicapés importante : la majorité des bibliothèques sont ainsi accessibles aux personnes à mobilité réduite et chaque arrondissement. Hormis les 7e et 8e, qui ne comptent aucune bibliothèque accessible aux personnes handicapées, chaque arrondissement a rendu au moins 50 % de ses bibliothèques accessibles aux personnes à mobilité réduite. <br>
+                                <p class="premier">Enfin, les bibliothèques parisiennes mènent une politique ambitieuse d’accessibilité aux publics handicapés : la majorité des bibliothèques sont ainsi accessibles aux personnes à mobilité réduite et chaque arrondissement. <br> 
                                 <br>
-                                
+                                  <b>Hormis les 7e et 8e arrondissements</b>, qui ne comptent aucune bibliothèque accessible aux personnes handicapées, et le 9e ou 30 % des bibliothèques leur sont accessibles, <b>chaque arrondissement compte au moins 50 % de ses bibliothèques accessibles aux personnes à mobilité réduite.</b> <br>
+                                <br>
+                                Mention spéciale au 1er arrondissement (1/1 bibliothèque de prêt accessible) et surtout <b>au 13e arrondissement (3/3 accessibles)</b> !
+                                <br>
                                 </p>
                       </div>
 </div>
