--- a/pages/page16.html
+++ b/pages/page16.html
@@ -3,7 +3,9 @@
                       <div id="" style="overflow-y: scroll; height:400px;">
                                 
                                
-                                <p class="premier">Les bibliothèques proposent aussi un certain nombre de services adaptées aux personnes malvoyantes : livres en gros caractère, livres sonores, etc. Cependant, toutes les bibliothèques et a fortiori tous les arrondissements ne disposent pas du même catalogue. Ainsi, les arrondissements du centre de Paris sont, cette fois-ci, relativement sous-dotés (hormis le 5e arrondissement, à nouveau dans le haut du panier) alors que les arrondissements périphériques apparaissent davantage dotés en livres spéciaux : 7300 dans le 18e, près de 8 000 dans le 19e et près de 11 000 dans le 15e. 
+                                <p class="premier">Les bibliothèques proposent aussi un certain nombre de <b>services adaptés aux personnes malvoyantes</b> : livres en gros caractère, livres sonores, etc. <br>
+                                  <br>
+                                  Cependant, toutes les bibliothèques et a fortiori tous les arrondissements ne disposent pas du même catalogue. Ainsi, les arrondissements du centre de Paris sont, cette fois-ci, relativement sous-dotés (hormis le 5e arrondissement, à nouveau dans le haut du panier) alors que <b>les arrondissements périphériques apparaissent davantage dotés en livres pour personnes malvoyantes</b> : 7300 dans le 18e, près de 8 000 dans le 19e et près de 11 000 dans le 15e. 
                                 </p>
                       </div>
 </div>
