--- a/pages/page8.html
+++ b/pages/page8.html
@@ -1,5 +1,5 @@
 <div style="margin: 30px 30px 40px 30px;">
-              <h4>II. Dis-moi ce que tu empruntes, je te dirai où tu habites ?</h4>
+              <h4>II. Dis-moi ce que tu empruntes, je te dirai où tu habites</h4>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: scroll; height:325px;">
