--- a/pages/page16.html
+++ b/pages/page16.html
@@ -1,6 +1,6 @@
 <div style="margin: 30px 30px 40px 30px;">
               <div id="text_to_change"></div>
-                      <div id="" style="overflow-y: scroll; height:400px;">
+                      <div id="" style="overflow-y: auto; height:400px;">
                                 
                                
                                 <p class="premier">Les bibliothèques proposent aussi un certain nombre de <b>services adaptés aux personnes malvoyantes</b> : livres en gros caractère, livres sonores, etc. <br>
