--- a/pages/page18.html
+++ b/pages/page18.html
@@ -3,6 +3,21 @@
                                  <p class="premier">
                                
                                 <span class="lettrine">Fin.</span> 
+                                   <br> 
+                                   <br>
+                                   <br>
+                                   <br>
+                                  Ce livre vous a plu ? N'hésitez pas à le partager sur les réseaux sociaux ! 
                                 </p>
-                     
+                     <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.12';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+  
+  <div class="fb-share-button" data-href="https://mariekhater.github.io/Dataviz_bibli" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmariekhater.github.io%2FDataviz_bibli&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Partager</a></div>
+  
 </div>
