--- a/pages/page5.html
+++ b/pages/page5.html
@@ -6,7 +6,7 @@
 		<li><a href="#page/6">I. Max et Lili, Tintin, Mickey : stars du box-office <span>6</span></a></li><br>
 		<br>
 		<br>
-		<li><a href="#page/8">II. Dis moi ce que tu empruntes, je te dirai où tu habites<span>8</span></a></li><br>
+		<li><a href="#page/8">II. Dis-moi ce que tu empruntes, je te dirai où tu habites<span>8</span></a></li><br>
 		<br>
 		<br>
 		<li><a href="#page/10">III. Les bibliothèques, has been ?<span>10</span></a></li><br>
