--- a/pages/page10.html
+++ b/pages/page10.html
@@ -5,7 +5,7 @@
                       <div id="" style="overflow-y: auto; height:400px;">
                                 <p class="premier"><span class="lettrine">A</span> l’heure du numérique et des jeux vidéos, les longues allées des bibliothèques pourraient être désertées.<br>
                                 <br>
-                                    Il n’en est rien : les bibliothèques ont une riche activité, et permettent d’accéder à des ressources variées - livres, revues, CD, DVD, voire des jeux vidéos à la bibliothèque Vaclav Havel (18e) à utiliser sur place ! 
+                                    Il n’en est rien : les bibliothèques, et permettent d’accéder à des ressources variées - <b>livres, revues, CD, DVD, et même des jeux vidéos </b>à la bibliothèque Vaclav Havel (18e) à utiliser sur place ! 
                         Elles sont relativement bien fréquentées par les Parisiens, comme le montrent les quelques chiffres-clés ci-contre, et leur public leur est fidèle : <b>13 millions de prêts en 2016 !</b></p>
                       </div>
 </div>
