--- a/pages/page10.html
+++ b/pages/page10.html
@@ -5,10 +5,10 @@
                       <div id="" style="overflow-y: auto; height:400px;">
                                 <p class="premier"><span class="lettrine">A</span> l’heure du numérique et des jeux vidéos, les longues allées des bibliothèques pourraient être désertées.<br>
                                 <br>
-                                    Il n’en est rien : les bibliothèques permettent d’emprunter à des ressources variées - livres, revues, CD, DVD et sont relativement bien fréquentées par les Parisiens, comme le montrent les quelques chiffres-clés ci-contre, et leur public leur est fidèle : <b>13 millions de prêts en 2016 !</b></p> <br>
+                                    Il n’en est rien : les bibliothèques permettent d’emprunter à des ressources variées - livres, revues, CD, DVD et sont relativement bien fréquentées par les Parisiens, comme le montrent les quelques chiffres-clés ci-contre, et leur public leur est fidèle : <b>13 millions de prêts en 2016 !</b> <br>
                       <br>
                         Elles proposent aussi de nombreux services accessibles sur place : consultation de documents, expositions et évènements, et même <b>jeux vidéos à la bibliothèque Vaclav Havel (18e) !</b>
-                        
+           </p>             
   </div>
 </div>
 <span class="page-number">10</span>
