--- a/pages/page6.html
+++ b/pages/page6.html
@@ -1,5 +1,5 @@
 <div style="margin: 30px 30px 40px 30px;">
-              <h4>I. Les goûts des Parisiens : Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</h4>
+              <h4>I. Les goûts des Parisiens : <br/>Max et Lili, Tintin, Le Journal de Mickey, stars du box-office</h4>
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
 <span class="page-number">6</span>
