--- a/pages/page8.html
+++ b/pages/page8.html
@@ -5,12 +5,12 @@
                       <div id="" style="overflow-y: scroll; height:325px;">
                                 <p class="premier"><span class="lettrine">O</span>n le sait, les goûts et les caractères des Parisiens diffèrent selon les arrondissements… Retrouve-t-on cette différence dans les principaux titres empruntés ? <br>
 <br>
-L’étude de certains titres ou auteurs phares montre que si les goûts des parisiens sont globalement homogènes, certaines différences peuvent parfois apparaître. <br>
+L’étude de certains titres ou auteurs phares montre que si les goûts des parisiens sont globalement homogènes, <b>certaines différences peuvent parfois apparaître</b>. <br>
 <br>
-Ainsi, chez les adultes, un axe Nord-Ouest Sud-Est semble se dessiner dans le degré de préférence des oeuvres de Marc Lévy par rapport à celles de Michel Houellebecq. En 2012, les ouvrages du célèbre auteur de best-sellers ont été beaucoup plus empruntés par les habitants du 1er, du 7ème, du 14ème ou du 16ème que les livres de l’intellectuel controversé. C’est exactement l’inverse pour les habitants du 10ème, 11ème, 12ème et 18ème. Nous laissons nos lecteurs en tirer les conclusions qu’ils souhaiteront.<br>
+Ainsi, chez les adultes, un axe Nord-Ouest Sud-Est semble se dessiner dans le degré de préférence des oeuvres de <b>Marc Lévy</b> par rapport à celles de <b>Michel Houellebecq</b>. En 2012, les ouvrages du célèbre auteur de best-sellers ont été beaucoup plus empruntés par les habitants du 1er, du 7ème, du 14ème ou du 16ème que les livres de l’intellectuel controversé. C’est exactement l’inverse pour les habitants du 10ème, 11ème, 12ème et 18ème. <b>Nous laissons nos lecteurs en tirer les conclusions qu’ils souhaiteront</b>.<br>
 <br>
-Les enfants du 5ème, de l’Ouest et du Nord Parisien ont quant à eux plébiscité Tintin par rapport aux Schtroumpfs. Que ces petites créatures bleues se rassurent car elles ont aussi leur lot de fans dans les arrondissements du Sud et de l’Est parisien. 
-Enfin, si dans tous les arrondissements ou presque, Max et Lili l’emportent allègrement sur le Journal de Mickey, ce dernier sauve l’honneur dans le 1er, le 5ème, 8ème, le 13ème et le 19ème. <br>
+                                  Les enfants du 5ème, de l’Ouest et du Nord Parisien ont quant à eux plébiscité <b>Tintin</b> par rapport aux <b>Schtroumpfs</b>. Que ces petites créatures bleues se rassurent car elles ont aussi leur lot de fans dans les arrondissements du Sud et de l’Est parisien. 
+                                  Enfin, si dans tous les arrondissements ou presque, <b>Max et Lili</b> l’emportent allègrement sur le <b>Journal de Mickey</b>, ce dernier sauve l’honneur dans le 1er, le 5ème, 8ème, le 13ème et le 19ème. <br>
 <br>
 </p>
                       </div>
