--- a/pages/page5.html
+++ b/pages/page5.html
@@ -3,7 +3,7 @@
 	<br>
 	<br>
 	<ul>
-		<li><a href="#page/6">I. Max et Lili, Tintin, Mickey : stars du box-office <span>6</span></a></li><br>
+		<li><a href="#page/6">I. Max et Lili, Tintin et Mickey, stars du box-office <span>6</span></a></li><br>
 		<br>
 		<br>
 		<li><a href="#page/8">II. Dis-moi ce que tu empruntes, je te dirai où tu habites<span>8</span></a></li><br>
