--- a/pages/page10.html
+++ b/pages/page10.html
@@ -3,7 +3,7 @@
               <hr class="star-dark mb-5">
               <div id="text_to_change"></div>
                       <div id="" style="overflow-y: auto; height:400px;">
-                                <p class="premier"><span class="lettrine">A</span> l’heure du numérique et des jeux vidéos, les longues allées des bibliothèques pourraient être désertées.<br>
+                                <p class="premier"><span class="lettrine">À</span> l’heure du numérique et des jeux vidéos, les longues allées des bibliothèques pourraient être désertées.<br>
                                 <br>
                                     Il n’en est rien : les bibliothèques permettent d’emprunter à des ressources variées - livres, revues, CD, DVD et sont relativement bien fréquentées par les Parisiens, comme le montrent les quelques chiffres-clés ci-contre, et leur public leur est fidèle : <b>13 millions de prêts en 2016 !</b> <br>
                       <br>
