--- a/pages/page18.html
+++ b/pages/page18.html
@@ -19,5 +19,8 @@
 }(document, 'script', 'facebook-jssdk'));</script>
   
   <div class="fb-share-button" data-href="https://mariekhater.github.io/Dataviz_bibli" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmariekhater.github.io%2FDataviz_bibli&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Partager</a></div>
-  
+  <a class="twitter-share-button"
+  href="https://twitter.com/intent/tweet?text=&Paris%20via%20ses%20biblis&url=https%3A%2F%2Fmariekhater.github.io%2FDataviz_bibli%2F"
+  data-size="large">
+Tweet</a>
 </div>
